:sparkles: Feature web observe prescriptions (#106)
* :iphone: Started designing frontend for observing prescriptions

* :bug: Fixed seeding symptoms and diagnosis

* :construction: Worked on getting reports for appointments

* :white_check_mark: Added unit and integration tests for getting report for appointment

* :construction: Implemented frontend and backend for getting report for appointment

* :sparkles: Implemented observe prescriptions for appointment

Co-authored-by: jelena-vlajkov <vlajkovj31@gmail.com>
Co-authored-by: Markovic Filip <markovicfilip98@gmail.com>

--- a/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
+++ b/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
@@ -1,4 +1,5 @@
 <div class="mat-card-cvr">
+    
 <div class = "container">
     <div [dataSource]="allCancelableAppointments" class="row1" id ="cancel-appointment" *ngFor="let appointment of allCancelableAppointments">
         <mat-card class="card">
@@ -30,8 +31,11 @@
                 <p class="content-paragraph">Status : <strong>Finished</strong></p>
                 <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
             </mat-card-content>
+
             <mat-card-actions>
-                    <button mat-raised-button color="accent" class="button1" (click)="saveAppointment(appointment)" routerLink="/survey" target="_blank" >Survey</button>
+                <button mat-raised-button color="primary" class="button2" (click)="otherMethod(appointment.start,appointment.doctorId)" >Report</button>
+                <button mat-raised-button color="primary" class="button2" (click)="openPrescriptionDialog(appointment.start,appointment.doctorId)"  >Prescriptions</button>
+                <button mat-raised-button color="accent" class="button1" (click)="saveAppointment(appointment)" routerLink="/survey" target="_blank" >Survey</button>
             </mat-card-actions>
         </mat-card>
     </div>
@@ -49,7 +53,10 @@
                 <p class="content-paragraph" *ngIf="!appointment.finished && !appointment.canceledByPatient">Status : <strong>Upcoming</strong></p>
                 <p class="content-paragraph" *ngIf="appointment.canceledByPatient ">Status : <strong>Canceled</strong></p>
                 <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
-            </mat-card-content>         
+            </mat-card-content> 
+            <mat-card-actions>
+                <button mat-raised-button color="primary" *ngIf="appointment.finished && !appointment.canceledByPatient" class="button2" (click)="dialog.openDialog()" >Prescriptions</button>
+            </mat-card-actions>        
         </mat-card>
     </div>
     
