:construction: Improved PDF creation

--- a/WebApplicationFrontend/src/app/prescription/observe-prescription/observe-prescription-dialog.component.html
+++ b/WebApplicationFrontend/src/app/prescription/observe-prescription/observe-prescription-dialog.component.html
@@ -12,5 +12,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button mat-dialog-close>Close</button>
-  <button mat-raised-button (click)="generatePdf(contentToConvert)">Convert to PDF</button>
+  <button mat-raised-button (click)="openPDF()">Convert to PDF</button>
 </div>
