--- a/MedbayTech.GraphicEditor/View/ScheduleRenovationListOfAvailableAppointments.xaml
+++ b/MedbayTech.GraphicEditor/View/ScheduleRenovationListOfAvailableAppointments.xaml
@@ -1,13 +1,11 @@
 ﻿<Window x:Class="MedbayTech.GraphicEditor.View.ScheduleRenovationListOfAvailableAppointments"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MedbayTech.GraphicEditor.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="400"
-      Title="ScheduleRenovationListOfAvailableAppointments" WindowStyle="None" WindowStartupLocation="CenterOwner">
-
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:MedbayTech.GraphicEditor.View"
+        mc:Ignorable="d"
+        Title="ScheduleRenovationListOfAvailableAppointments" Height="450" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <DockPanel>
         <Label DockPanel.Dock="Top" Content="Please select one of available appointments for renovation:" FontWeight="Bold"/>
         <DockPanel DockPanel.Dock="Bottom">
