:construction: Event sourcing

--- a/WebApplicationFrontend/src/app/appointment/scheduling/scheduling.component.css
+++ b/WebApplicationFrontend/src/app/appointment/scheduling/scheduling.component.css
@@ -14,3 +14,7 @@ table {
     justify-content: center;
     margin-top: 10px;
 }
+
+.mat-horizontal-stepper-header { 
+    pointer-events: none !important; 
+}
