--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
@@ -1,3 +1,4 @@
+<br><br>
 <div class = "container">
     <mat-card class="card">
         <mat-card-header>
@@ -9,7 +10,8 @@
         <mat-card-content>            
             <p class="content-paragraph">Full Name : <strong>{{ medicalRecord.name }} {{ medicalRecord.surname }}</strong></p>
             <p class="content-paragraph">ID Number: <strong>{{ medicalRecord.patientId }}</strong></p>
-            <p class="content-paragraph">Gender : <strong>{{ medicalRecord.gender }}</strong></p>
+            <p class="content-paragraph" *ngIf= "medicalRecord.gender === '0'">Gender : <strong>Male</strong></p>
+            <p class="content-paragraph" *ngIf= "medicalRecord.gender === '1'">Gender : <strong>Female</strong></p>
             <p class="content-paragraph">Date of birth: <strong>{{ medicalRecord.dateOfBirth | date : 'dd/MM/yyyy'}}</strong></p>
             <p class="content-paragraph">Blood type: <strong>{{ medicalRecord.bloodType }}</strong></p>
             <p class="content-paragraph">Address : <strong>{{ medicalRecord.street }} {{ medicalRecord.number }} , {{ medicalRecord.city }} , {{ medicalRecord.state }}</strong></p>
