--- a/MedbayTech.GraphicEditor/View/ScheduleRenovationListOfAvailableAppointments.xaml
+++ b/MedbayTech.GraphicEditor/View/ScheduleRenovationListOfAvailableAppointments.xaml
@@ -26,8 +26,8 @@
         </DockPanel>
         <DataGrid DockPanel.Dock="Bottom" Name="dataGridAppointment" Margin="5,0,5,0" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Star" Width="200" Binding="{Binding Start}"/>
-                <DataGridTextColumn Header="End" Width="200" Binding="{Binding End}"/>
+                <DataGridTextColumn Header="Star" Width="200" Binding="{Binding Period.StartTime}"/>
+                <DataGridTextColumn Header="End" Width="200" Binding="{Binding Period.EndTime}"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
