:lipstick: changed lorem ipsum text to an actual text on landing page and home page

--- a/WebApplicationFrontend/src/app/home-page/home-page.component.html
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.html
@@ -15,49 +15,42 @@
     <div class="cards">
         <mat-card class="card">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Lorem ipsum</mat-card-title>
-                <mat-card-subtitle>lorem ipsum</mat-card-subtitle>
+                <div mat-card-avatar class="example-header-image1"></div>
+                <mat-card-title>Who are we?</mat-card-title>
             </mat-card-header>
             <mat-card-content>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                   With hundreds of employees across more than 10 locations and some 
+                   of the country's leading specialists, Medbay Tech offers you help,
+                   diagnosis and treatment in almost any area of healthcare.
                 </p>
             </mat-card-content>
         </mat-card>
         <mat-card class="card">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Lorem ipsum</mat-card-title>
-                <mat-card-subtitle>lorem ipsum</mat-card-subtitle>
+                <div mat-card-avatar class="example-header-image2"></div>
+                <mat-card-title>Your health is our concern</mat-card-title>
             </mat-card-header>
             <mat-card-content>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                    Ethic and professionalism are the basis of the guidelines that guide
+                    us in our daily work. Your health is our concern, your needs are first for us,
+                    and our team of skilled doctors are everyday here for you,
+                    working closely together in order to find the best treatment for you.
                 </p>
             </mat-card-content>
         </mat-card>
         <mat-card class="card">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Lorem ipsum</mat-card-title>
-                <mat-card-subtitle>lorem ipsum</mat-card-subtitle>
+                <div mat-card-avatar class="example-header-image3"></div>
+                <mat-card-title>Quick scheduling</mat-card-title>
             </mat-card-header>
             <mat-card-content>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                    With our team, you recieve medical tests and physician consultations
+                    in just a few days. This means a diagnosis comes fast, and treatments,
+                    surgery included, can be scheduled very quickly. We take care of you
+                    during the entire treatment.
                 </p>
             </mat-card-content>
         </mat-card>
