--- a/WebApplicationFrontend/src/app/landing-page/landing-page.component.css
+++ b/WebApplicationFrontend/src/app/landing-page/landing-page.component.css
@@ -53,3 +53,18 @@ p {
 button {
     width: 10vw;
 }
+
+.example-header-image1 {
+    background-image: url("../../assets/cyan.png");
+    background-size: cover;
+}
+
+.example-header-image2 {
+    background-image: url("../../assets/orange.png");
+    background-size: cover;
+}
+
+.example-header-image3 {
+    background-image: url("../../assets/yellow.png");
+    background-size: cover;
+}
