:lipstick: added css for home page

--- a/WebApplicationFrontend/src/app/home-page/home-page.component.css
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.css
@@ -49,3 +49,18 @@ footer {
 p {
     padding-top: 10px;
 }
+
+.example-header-image1 {
+    background-image: url("../../assets/cyan.png");
+    background-size: cover;
+}
+
+.example-header-image2 {
+    background-image: url("../../assets/orange.png");
+    background-size: cover;
+}
+
+.example-header-image3 {
+    background-image: url("../../assets/yellow.png");
+    background-size: cover;
+}
