--- a/WebApplicationFrontend/src/app/appointment/recommendation/recommendation.component.html
+++ b/WebApplicationFrontend/src/app/appointment/recommendation/recommendation.component.html
@@ -14,6 +14,9 @@
                     <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                     <mat-date-range-picker #picker2></mat-date-range-picker>   
                 </mat-form-field>
+                <div>
+                    <button mat-button matStepperNext>Next</button>
+                </div>
             </form>
         </mat-step>
         <mat-step [stepControl]="doctorFormGroup" [optional]="isOptional">
@@ -42,6 +45,10 @@
                 </div>
             </div>
             </form>
+            <div>
+                <button mat-button matStepperPrevious>Back</button>
+                <button mat-button matStepperNext>Next</button>
+            </div>
         </mat-step>
 
         <mat-step>
@@ -57,6 +64,7 @@
                     </div> 
                 </div>
               </mat-radio-group>
+              <button mat-button matStepperPrevious>Back</button>
               <button mat-raised-button color="primary" style="margin-top: 30px;" (click)="submit()">Submit</button>
         </mat-step>
         
