--- a/WebApplicationFrontend/src/app/home-page/home-page.component.css
+++ b/WebApplicationFrontend/src/app/home-page/home-page.component.css
@@ -38,7 +38,7 @@ footer {
 }
 
 .carousel {
-    width: 75%;
+    width: 100%;
 }
 
 .container {
@@ -48,4 +48,19 @@ footer {
 
 p {
     padding-top: 10px;
+}
+
+.example-header-image1 {
+    background-image: url("../../assets/cyan.png");
+    background-size: cover;
+}
+
+.example-header-image2 {
+    background-image: url("../../assets/orange.png");
+    background-size: cover;
+}
+
+.example-header-image3 {
+    background-image: url("../../assets/yellow.png");
+    background-size: cover;
 }
